# Computer_Graphics

./: README.md
finalProject/: CMakeLists.txt
finalProject/finalProject/: fp_building.cpp  fp_character.cpp  fp_main.cpp  fp_skybox.cpp  skybox.frag
finalProject/finalProject/render/: headers.h  loadTextureTileBox.cpp
finalProject/finalProject/shader/: bot.vert  box.frag  box.vert  skybox.frag  skybox.vert
lab1/lab1/lab1/: lab1_cube.cpp  lab1_triangle.cpp  lab1_window.cpp
lab2/lab2/: CMakeLists.txt  stb_image_impl.cpp
lab2/lab2/lab2/: lab2_building.cpp  lab2_skybox.cpp
lab3/new_lab3/lab3/lab3/: box.frag  box.vert  depth.vert  lab3_cornellbox.cpp
lab3/old_lab3/lab3/: box.frag  box.vert  lab3_cornellbox.cpp
lab4/lab4/: lab4_character.cpp  lab4_skeleton.cpp
